# JUCEParameterVersions

./: CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/MinimalPluginTemplate/: CMakeLists.txt
Plugins/MinimalPluginTemplate/Source/: PluginProcessor.cpp  PluginProcessor.h
